@@ -1,42 +1,30 @@
 log4j.rootCategory=info, stdout
 
-
-# Custom appender for logging most important messages only
-log4j.logger.core=INFO, core
-log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.core.Threshold=INFO
-log4j.appender.core.File=logs/core.log
-log4j.appender.core.layout=org.apache.log4j.PatternLayout
-log4j.appender.core.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.core.DatePattern='.'yyyy-MM
-log4j.appender.core.Append=true
-
-# User friendly summary
-log4j.logger.status=INFO,status
-log4j.appender.status=org.apache.log4j.FileAppender
-log4j.appender.status.Threshold=INFO
-log4j.appender.status.File=logs/summary.log
-log4j.appender.status.layout=org.apache.log4j.PatternLayout
-log4j.appender.status.layout.ConversionPattern=%m%n
-log4j.appender.status.Append=false
-
-
 # Standard output appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 log4j.appender.stdout.Threshold=INFO
 
+# status logger
+log4j.logger.status=debug, status, status_summary, core
+log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.status.Threshold=INFO
+log4j.appender.status.File=logs/status.log
+log4j.appender.status.DatePattern='.'yyyy-MM
+log4j.appender.status.Append=true
+log4j.appender.status.layout=org.apache.log4j.PatternLayout
+log4j.appender.status.layout.ConversionPattern=%d - %m%n
 
+log4j.appender.status_summary=org.apache.log4j.FileAppender
+log4j.appender.status_summary.Threshold=INFO
+log4j.appender.status_summary.File=logs/summary.log
+log4j.appender.status_summary.Append=false
+log4j.appender.status_summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.status_summary.layout.ConversionPattern=%m%n
 
-######## redirect all spring framework activity into a separate log
-log4j.logger.org.springframework=info, log_spring
-log4j.additivity.org.springframework=false
-log4j.logger.edu.mcw.rgd.dao.impl=info, log_spring
-log4j.additivity.edu.mcw.rgd.dao.impl=false
-
-log4j.appender.log_spring=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log_spring.DatePattern='.'yyyy-MM
-log4j.appender.log_spring.Append=true
-log4j.appender.log_spring.File=logs/spring.log
-log4j.appender.log_spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_spring.layout.ConversionPattern=[%d] - %m%n
+log4j.appender.core=org.apache.log4j.FileAppender
+log4j.appender.core.Threshold=DEBUG
+log4j.appender.core.File=logs/core.log
+log4j.appender.core.Append=false
+log4j.appender.core.layout=org.apache.log4j.PatternLayout
+log4j.appender.core.layout.ConversionPattern=%d - %m%n
